creating initial Flink project (WIP)